2014-08-01  Stanislas Rolland  <typo3@sjbr.ca>

	* Update version to 2.0.9

2014-07-29  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to Spanish localization file
	* Resolves #60536: Mallformed Last-Modified header (Thanks to Christian Ludwig)

2014-04-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Correction to default css styles

2014-04-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Localization of audio captcha may fail for lack of available TCA of pages_language_overlay

2014-04-02  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #57543: French text in Italian language file

2014-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Cleanup calls to deprecated methods

2014-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #56045: Add random variable in captcha image src
	* Update version to 2.0.8

2014-02-13  Stanislas Rolland  <typo3@sjbr.ca>

	* Enable in TYPO3 6.2
	* Update version to 2.0.7

2014-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #55777: Object manager exceptions raised in TYPO3 6.2	

2013-11-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #51900: Danish locallang file wrongly named
	* Brazilian locallang file wrongly named
	* Update version to 2.0.6

2013-08-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #50931: Error in autoload.php
	* Update version to 2.0.5

2013-07-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #47810: Audio Captcha not working under IE 8
	* Update version to 2.0.4

2013-07-04  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #47810: Audio Captcha not working under IE 8
	* Update version to 2.0.3

2013-06-19  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #49272: Add support for mp3 audio captcha rendering
	* Fixed bug #49274: Voice file for digit 3 in Portuguese is broken	

2013-05-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #48516: Replace some default fonts for better readability
	* Fixed issue #48519: Correct/remove some words from French words list
	* Updated manual